from enum import Enum


class Pruefungsform(Enum):
    KLAUSUR = "Klausur"
    ADVANCED_WORKBOOK = "Advanced Workbook"
    HAUSARBEIT = "Hausarbeit"
    PORTFOLIO = "Portfolio"
    PROJEKT = "Projekt"
    SEMINAR = "Seminar"
    PRAESENTATION = "Praesentation"
    BACHELORARBEIT = "Bachelorarbeit"
